welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:19: error: ':' expected but ')' found.
def chercheGolomb(y) {
                   ^golomb:28: error: identifier expected but '}' found.
 }
 ^